# quantumdsp_invader

./: .gitignore  CMakeLists.txt
cmake/: cpm.cmake
plugin/: CMakeLists.txt
plugin/dsp/: NoiseGate.cpp
plugin/dsp/ResamplingContainer/: ResamplingContainer.h
plugin/dsp/ResamplingContainer/Dependencies/: LanczosResampler.h
plugin/include/: AppConfig.h  PluginEditor.h  PluginProcessor.h  defines.h  delay.h  licenseChecker.h  pn.h  reverb.h  shelf.h
plugin/include/Gui/: Buttons.h  ButtonsAndKnobs.h  MultiColumnComboBox.h  PresetPanel.h
plugin/include/Service/: PresetManager.cpp  PresetManager.h  UserIRManager.h
plugin/include/Utility/: Fifo.h  ParameterHelper.h
plugin/resources/: InvaderIcon.icns  dirac.m
plugin/resources/amp1/: AMP1-GAIN1.0.wav.nam  AMP1-GAIN1.5.wav.nam  AMP1-GAIN10.wav.nam  AMP1-GAIN2.0.wav.nam  AMP1-GAIN2.5.wav.nam  AMP1-GAIN3.0.wav.nam  AMP1-GAIN3.5.wav.nam  AMP1-GAIN4.0.wav.nam  AMP1-GAIN4.5.wav.nam  AMP1-GAIN5.0.wav.nam  AMP1-GAIN5.5.wav.nam  AMP1-GAIN6.0.wav.nam  AMP1-GAIN6.5.wav.nam  AMP1-GAIN7.0.wav.nam  AMP1-GAIN7.5.wav.nam  AMP1-GAIN8.0.wav.nam  AMP1-GAIN8.5.wav.nam  AMP1-GAIN9.0.wav.nam  AMP1-GAIN9.5.wav.nam
plugin/resources/boost/: AMP2-GAIN1.0.wav.nam  AMP2-GAIN1.5.wav.nam  AMP2-GAIN10.0.wav.nam  AMP2-GAIN2.0.wav.nam  AMP2-GAIN2.5.wav.nam  AMP2-GAIN3.0.wav.nam  AMP2-GAIN3.5.wav.nam  AMP2-GAIN4.0.wav.nam  AMP2-GAIN4.5.wav.nam  AMP2-GAIN5.0.wav.nam  AMP2-GAIN5.5.wav.nam  AMP2-GAIN6.0.wav.nam  AMP2-GAIN6.5.wav.nam  AMP2-GAIN7.0.wav.nam  AMP2-GAIN7.5.wav.nam  AMP2-GAIN8.0.wav.nam  AMP2-GAIN8.5.wav.nam  AMP2-GAIN9.0.wav.nam  AMP2-GAIN9.5.wav.nam
plugin/resources/presets/: 1. The Rocker.preset  10. Modern Rhythms.preset  10.preset  11. Anger Management.preset  12. Psychedlica.preset  12.preset  13. Flying Solo.preset  14. Texas Blooze.preset  15. Vibin'.preset  15.preset  16. Dreamscape.preset  16.preset  17. Thrasher.preset  17.preset  18. Down Under.preset  18.preset  19.preset  2. Capt. Crunch.preset  20.preset  21.preset  22.preset  23.preset  24.preset  3. Eh-I-See!.preset  4. Soaring Lead.preset  5. Cleaning Up.preset  5.preset  6. Sweet Tea Blues.preset  7. Rökk.preset  8. Crisp & Clear.preset  8.preset  9. Modern Singles.preset  9.preset
plugin/source/: AppConfig.cpp  PluginEditor.cpp  PluginProcessor.cpp  delay.cpp  licenseChecker.cpp  pn.cpp  reverb.cpp  shelf.cpp
